--- a/css/main.css
+++ b/css/main.css
@@ -57,8 +57,43 @@ section {
   font-size: 50px;
 }
 
+.playerName {
+  color: #f6f6f6;
+  height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: opacity 0.5s ease 0.5s;
+  transition: opacity 0.5s ease 0.5s;
+}
+
+.playerName h1 {
+  font-size: 50px;
+}
+
+.playerName input {
+  width: 350px;
+  height: 80px;
+  font-size: 30px;
+}
+
 .intro button,
-.match button {
+.match button,
+.playerName button {
   width: 150px;
   height: 50px;
   cursor: pointer;
@@ -77,8 +112,8 @@ section {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-transition: opacity 0.5s ease 0.5s;
-  transition: opacity 0.5s ease 0.5s;
+  -webkit-transition: opacity 0.5s ease 1s;
+  transition: opacity 0.5s ease 1s;
 }
 
 .winner {
