--- a/css/main.scss
+++ b/css/main.scss
@@ -53,7 +53,7 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transition: opacity 0.5s ease 0.5s;
+    transition: opacity 0.5s ease .2s;
 
     h1 {
         font-size: 50px;
@@ -61,14 +61,40 @@ section {
 
     input {
         width: 350px;
-        height: 80px;
+        height: 50px;
         font-size: 30px;
+    }
+}
+
+.gameOver {
+    color: #f6f6f6;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity 0.5s ease 1s;
+
+    h1 {
+        font-size: 50px;
+    }
+
+    p {
+        text-align: center;
+        padding: 10px;
+        font-size: 25px;
     }
 }
 
 .intro button,
 .match button,
-.playerName button {
+.playerName button,
+.gameOver button,
+    {
     width: 150px;
     height: 50px;
     cursor: pointer;
@@ -86,7 +112,7 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transition: opacity 0.5s ease 1s;
+    transition: opacity 0.5s ease 0.7s;
 }
 
 .winner {
