--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+p {
+  margin-bottom: 40px;
+}
+
 section {
   height: 100vh;
   background-color: #287094;
@@ -34,6 +38,22 @@ section {
   font-size: 25px;
 }
 
+.intro button,
+.match button,
+.playerName button,
+.gameOver button {
+  width: 150px;
+  height: 50px;
+  cursor: pointer;
+  margin: 20px;
+  background: none;
+  border: none;
+  color: #f6f6f6;
+  font-size: 20px;
+  background: #023246;
+  border-radius: 3px;
+}
+
 .intro {
   color: #f6f6f6;
   height: 50vh;
@@ -54,7 +74,21 @@ section {
 }
 
 .intro h1 {
-  font-size: 50px;
+  font-size: 60px;
+}
+
+.intro .mt-4 {
+  matgin-bottom: 30px;
+  font-size: 40px;
+}
+
+.intro li {
+  font-size: 25px;
+}
+
+.intro button {
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .playerName {
@@ -123,22 +157,6 @@ section {
   text-align: center;
   padding: 10px;
   font-size: 25px;
-}
-
-.intro button,
-.match button,
-.playerName button,
-.gameOver button {
-  width: 150px;
-  height: 50px;
-  cursor: pointer;
-  margin: 20px;
-  background: none;
-  border: none;
-  color: #f6f6f6;
-  font-size: 20px;
-  background: #023246;
-  border-radius: 3px;
 }
 
 .match {
