--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+p {
+    margin-bottom: 40px;
+}
 
 section {
     height: 100vh;
@@ -28,6 +31,23 @@ section {
     }
 }
 
+.intro button,
+.match button,
+.playerName button,
+.gameOver button,
+    {
+    width: 150px;
+    height: 50px;
+    cursor: pointer;
+    margin: 20px;
+    background: none;
+    border: none;
+    color: #f6f6f6;
+    font-size: 20px;
+    background: #023246;
+    border-radius: 3px;
+}
+
 .intro {
     color: #f6f6f6;
     height: 50vh;
@@ -38,7 +58,20 @@ section {
     transition: opacity 0.5s ease;
 
     h1 {
-        font-size: 50px;
+        font-size: 60px;
+    }
+
+    .mt-4 {
+        matgin-bottom: 30px;
+        font-size: 40px;
+    }
+
+    li {
+        font-size: 25px;
+    }
+    button {
+        margin-top: 100px;
+        margin-bottom: 100px;
     }
 }
 
@@ -90,22 +123,7 @@ section {
     }
 }
 
-.intro button,
-.match button,
-.playerName button,
-.gameOver button,
-    {
-    width: 150px;
-    height: 50px;
-    cursor: pointer;
-    margin: 20px;
-    background: none;
-    border: none;
-    color: #f6f6f6;
-    font-size: 20px;
-    background: #023246;
-    border-radius: 3px;
-}
+
 
 .match {
     position: absolute;
