--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 p {
     margin-bottom: 40px;
 }
@@ -50,28 +51,28 @@ section {
 
 .intro {
     color: #f6f6f6;
-    height: 50vh;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     transition: opacity 0.5s ease;
 
+
     h1 {
         font-size: 60px;
+        margin-bottom: 20vh;
+        text-align: center;
     }
 
     .mt-4 {
-        matgin-bottom: 30px;
+        margin-bottom: 30px;
+        margin-top: 30px;
         font-size: 40px;
     }
 
     li {
         font-size: 25px;
-    }
-    button {
-        margin-top: 100px;
-        margin-bottom: 100px;
     }
 }
 
@@ -160,62 +161,106 @@ div.fadeIn {
     pointer-events: all;
 }
 
-@keyframes shakePlayer {
-    0% {
-        transform: rotateY(180deg) rotateZ(0deg) translateY(0px);
+@media (max-width: 600px) {
+    .intro {
+
+        height: 50vh;
+
+        h1 {
+            font-size: 25px;
+            margin-bottom: 60px;
+
+        }
+
+        li {
+            font-size: 15px;
+
+        }
     }
 
-    15% {
-        transform: rotateY(180deg) rotateZ(50deg) translateY(-50px);
+    .intro button,
+    .match button,
+    .playerName button,
+    .gameOver button,
+        {
+        width: 90px;
+        height: 30px;
+        cursor: pointer;
+        margin: 10px;
+        background: none;
+        border: none;
+        color: #f6f6f6;
+        font-size: 13px;
+        background: #023246;
+        border-radius: 2px;
+    }
+    img {
+        width: 152px;
+        height: 134px;
     }
 
-    30% {
-        transform: rotateY(180deg) rotateZ(0deg) translateY(0px);
+    .options {
+        justify-content: center;
     }
 
-    45% {
-        transform: rotateY(180deg) rotateZ(50deg) translateY(-50px);
-    }
-
-    60% {
-        transform: rotateY(180deg) rotateZ(0deg) translateY(0px);
-    }
-
-    80% {
-        transform: rotateY(180deg) rotateZ(50deg) translateY(-50px);
-    }
-
-    100% {
-        transform: rotateY(180deg) rotateZ(0deg) translateY(0px);
-    }
 }
 
-@keyframes shakeComputer {
-    0% {
-        transform: rotateZ(0deg) translateY(0px);
+    @keyframes shakePlayer {
+        0% {
+            transform: rotateY(180deg) rotateZ(0deg) translateY(0px);
+        }
+
+        15% {
+            transform: rotateY(180deg) rotateZ(50deg) translateY(-50px);
+        }
+
+        30% {
+            transform: rotateY(180deg) rotateZ(0deg) translateY(0px);
+        }
+
+        45% {
+            transform: rotateY(180deg) rotateZ(50deg) translateY(-50px);
+        }
+
+        60% {
+            transform: rotateY(180deg) rotateZ(0deg) translateY(0px);
+        }
+
+        80% {
+            transform: rotateY(180deg) rotateZ(50deg) translateY(-50px);
+        }
+
+        100% {
+            transform: rotateY(180deg) rotateZ(0deg) translateY(0px);
+        }
     }
 
-    15% {
-        transform: rotateZ(50deg) translateY(-50px);
-    }
+    @keyframes shakeComputer {
+        0% {
+            transform: rotateZ(0deg) translateY(0px);
+        }
 
-    30% {
-        transform: rotateZ(0deg) translateY(0px);
-    }
+        15% {
+            transform: rotateZ(50deg) translateY(-50px);
+        }
 
-    45% {
-        transform: rotateZ(50deg) translateY(-50px);
-    }
+        30% {
+            transform: rotateZ(0deg) translateY(0px);
+        }
 
-    60% {
-        transform: rotateZ(0deg) translateY(0px);
-    }
+        45% {
+            transform: rotateZ(50deg) translateY(-50px);
+        }
 
-    80% {
-        transform: rotateZ(50deg) translateY(-50px);
-    }
+        60% {
+            transform: rotateZ(0deg) translateY(0px);
+        }
 
-    100% {
-        transform: rotateZ(0deg) translateY(0px);
+        80% {
+            transform: rotateZ(50deg) translateY(-50px);
+        }
+
+        100% {
+            transform: rotateZ(0deg) translateY(0px);
+        }
     }
-}
