--- a/css/main.scss
+++ b/css/main.scss
@@ -91,7 +91,7 @@ section {
     }
 
     input {
-        width: 350px;
+        width: 450px;
         height: 50px;
         font-size: 30px;
     }
@@ -158,7 +158,7 @@ div.fadeIn {
     pointer-events: all;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
     .intro {
 
         height: 50vh;
@@ -178,6 +178,10 @@ div.fadeIn {
     .playerName {
         h1 {
             font-size: 30px;
+        }
+
+        input {
+            width: 350px;
         }
     }
 
@@ -214,6 +218,57 @@ div.fadeIn {
         justify-content: center;
     }
 
+}
+
+@media (max-width: 450px) {
+    .intro {
+
+
+        h1 {
+            font-size: 15px;
+            margin-bottom: 40px;
+
+        }
+
+        li {
+            font-size: 10px;
+
+        }
+    }
+
+    .playerName {
+        h1 {
+            font-size: 20px;
+        }
+
+        input {
+            width: 75vw;
+            font-size: 7vw;
+        }
+    }
+
+    .gameOver {
+        h1 {
+            font-size: 20px;
+            text-align: center;
+        }
+    }
+
+
+    .match {
+
+        .winner {
+            font-size: 20px;
+            text-align: center;
+        }
+
+        button {
+            width: 70px;
+            height: 25px;
+            font-size: 9px;
+            border-radius: 2px;
+        }
+    }
 }
 
 @keyframes shakePlayer {
