--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 
 section {
   height: 100vh;
-  background-color: #9b6d31;
+  background-color: #000000;
   font-family: sans-serif;
 }
 
@@ -45,10 +45,10 @@ section {
   margin: 20px;
   background: none;
   border: none;
-  color: #f6f6f6;
+  color: #000000;
   font-size: 20px;
-  background: #023246;
-  border-radius: 3px;
+  background: #ffffff;
+  border-radius: 12px;
 }
 
 .intro {
@@ -102,6 +102,7 @@ section {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   position: absolute;
+  border-radius: 12px;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -112,12 +113,15 @@ section {
 
 .playerName h1 {
   font-size: 50px;
+  border-radius: 12px;
 }
 
 .playerName input {
   width: 450px;
   height: 50px;
   font-size: 30px;
+  border-radius: 12px;
+  text-align: center;
 }
 
 .gameOver {
@@ -393,4 +397,3 @@ div.fadeIn {
             transform: rotateZ(0deg) translateY(0px);
   }
 }
-/*# sourceMappingURL=main.css.map */
